--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,8 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cx5fT60X--BRDV8DjH73VX6SMqV6iL4&libraries=places&callback=initMap"
+        async defer></script>
   </body>
 </html>
