--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Croissant+One|Lemon|Montserrat" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
@@ -30,7 +31,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    
+
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cx5fT60X--BRDV8DjH73VX6SMqV6iL4&libraries=places&callback=initMap"
         async defer></script>
   </body>
