added search with yahoo

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,6 @@
       To create a production bundle, use `npm run build`.
     -->
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cx5fT60X--BRDV8DjH73VX6SMqV6iL4&libraries=places&callback=initMap"
-        async defer></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYVFaVlAm7z6PBipNIaVb-6SZxWY8Cj-o&libraries=places"></script>
   </body>
 </html>
