--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Croissant+One|Lemon|Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4Cx5fT60X--BRDV8DjH73VX6SMqV6iL4&libraries=places&callback=initMap"
-        async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC726VaO5Lh4m2uTPbJE1KS-vqKeeaqZlI" ></script>
     <script type="text/javascript" src="./javascripts/jquery.jslots.min.js"></script>
     <script type="text/javascript" src="./javascripts/jquery.easing.1.3.js"></script>
     <script type="text/javascript" charset="utf-8">  
