added search styles

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,14 @@
         async defer></script>
     <script type="text/javascript" src="./javascripts/jquery.jslots.min.js"></script>
     <script type="text/javascript" src="./javascripts/jquery.easing.1.3.js"></script>
-    <script type="text/javascript" charset="utf-8">  
-  
-    $('.slot').jSlots({  
-        spinner : '#playBtn',  
-        winnerNumber : 0  
-    });  
-  
-</script>  
+    <script type="text/javascript" charset="utf-8">
+
+    $('.slot').jSlots({
+        spinner : '#playBtn',
+        winnerNumber : 0
+    });
+
+</script>
   </head>
   <body>
     <div id="root"></div>
@@ -49,6 +49,6 @@
         async defer></script>
     <script type="text/javascript" src="./javascripts/jquery.jslots.min.js"></script>
     <script type="text/javascript" src="./javascripts/jquery.easing.1.3.js"></script> -->
-
+    <!-- Latest compiled and minified JavaScript -->
   </body>
 </html>
